--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
             <h2>О проекте</h2>
             <p>
-                ChatGPT-PI21v - это многофункциональный чат-бот, который предоставляет пользователям возможность взаимодействовать с системой на основе искусственного интеллекта. 
+                ChatGPT-PI21v — это многофункциональный чат-бот, который предоставляет пользователям возможность взаимодействовать с системой на основе искусственного интеллекта. 
             </p>
             <p>
                 Проект включает в себя несколько модулей, таких как генерация текста, автоматическое определение языка, генерация изображений и другие функции, которые делают взаимодействие с ботом более удобным и эффективным.            </p>
